tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__FractionedBenzen-AAAAAAAAAAAAAAAAAAAMJg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3110,
  "prerequisites": [
    3108
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the most important steps is to remove the limitation you had when distilling. Wood Tar turns into Benzene? That's not how it should be, there's much more to get from that tar than what you've been extracting from it. To keep the rest, you need more space in the distillation process, or, more specifically, more height. Each of the fluids that can be separated from within the tar will stick at a different height level, sitting on top of all the others that are denser than itself.\n\nBasically, you need a multiblock, instead of a singleblock. The Distillation Tower you will need for this recipe has to be at least 6 blocks tall, with 1 input plus 5 outputs. Out of it, you will get Benzene, Toluene and Phenol, which are all viable gases for power alongside being very useful for progression (Toluene for compressing with TNT and moving past HV, Phenol for crafting circuits in the next tier and other chemical lines). You will also get various types of Dimethylbenzene. For now the only one of interest is 1,2-Dimethylbenzene which is a part of the PBI line in IV. Though even that is unfortunately of little use to you right now. You also get Creosote for your Lubricant needs, or a little extra power.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fractioned Benzene",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3108
  ],
  "rewards": [],
  "tasks": []
}
