tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__FreeForAllFertil-AAAAAAAAAAAAAAAAAAAMMg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3122,
  "prerequisites": [
    3121
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You might have heard of the Fertilia crop, which can easily automate the Fertilizer input for your crops, if you're using them. Why bother, though, when you're already getting it from your DT? That's right, you will also be able to automate fertilizing alongside everything else, which is very important for high-statted crops, making all the inputs (energy, water, fertilizer) automated without any outside inputs. Pretty neat, huh?\n\nThat said, you might not be using IC2 crops at all. In that case, you can electrolyze it, and you'll get a lot of free Carbon and Calcite Dust, which you'll certainly use in future chemistry. You can also use the CO2 Gas from the DT to get Carbon, I guess? It's not very useful.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Free For All Fertilizer",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3121
  ],
  "rewards": [],
  "tasks": []
}
