tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__FurtherCharcoalD-AAAAAAAAAAAAAAAAAAAMKg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3114,
  "prerequisites": [
    3110
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Distillation Tower you've recently unlocked can bring forth many, many more outputs than what you've done so far. If you look at NEI, you might see that there are other Charcoal-related fluids that have recipes in this multi, and this is the time to work with them: doing it all in singleblock Distilleries would be very wasteful.\n\nThe most important part about getting these fluids is the Pyrolyse Oven. If you haven't made one, it's highly recommended that you make at least one. You can upgrade both the energy hatch and the coils used in it to keep it up to speed with everything else, no need to build more than one. Aside from fulfilling the purpose of the Coke Oven, to cook Wood into Charcoal, it gives the choice of which of several fluids it also outputs as it does the processing. Most of the options are potentially useful, but a complete Benzene setup will prefer Charcoal Byproducts because they are, essentially, the complete product.\n\nATTENTION: This setup is technically HV, but it's quite expensive. It's fine if you move to EV first before you build this. It is in no way required to progress in HV.\n\nWith Charcoal Byproducts, the full setup involves DTing that into Wood Tar, Wood Vinegar and Wood Gas, and then DTing all of those into their respective outputs. With one tower for each, you will end up with a quad DT setup, very expensive overall in terms of Stainless Steel, but with huge savings compared to making 4 separate ones. Keep in mind, however, that they will not all have the same height. Additionally, Wood Gas is not as valuable as the other two (although it is a decent Ethylene source), so it's also a good idea to make 2 of the 4 DTs process that, and burn the Wood Gas for the little power it can provide.\n\nAs a final note, the towers do process things slowly. Add Distilleries, if you wish, to get specific outputs.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Further Charcoal Distillation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3110
  ],
  "rewards": [],
  "tasks": []
}
