tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__GreenCetaneBoost-AAAAAAAAAAAAAAAAAAAMMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3120,
  "prerequisites": [
    3118,
    3119
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Tetranitromethane is the additive you need to turn Biodiesel into Cetane-Boosted Diesel. Each bucket of the first turns into 0.9 buckets of the second, but if you look at the EU values per bucket of both, 320k turns into 900k EU, discounting 5.7k EU from the craft, a huge upgrade in power generation. The TNM only costs some thousand EU, the main difficulty is automating the input of all the materials, which shouldn't be too hard at this stage of progression.\n\nThe power density of this fuel is great, but it doesn't mean you'll have enough power to get to EV. What really matters here is the amount of plants or fish you can provide, since all the other items and fluids are basically additives when compared to the amount of oil you need. It's hard to match the speed at which crude oil can be obtained, but you can bring forth a lot of Seed/Fish Oil if you increase the size of those setups.\n\nThere are more possibilities for CBD in the future, if you want to move towards those.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Green Cetane-Boosted Diesel",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3118,
    3119
  ],
  "rewards": [],
  "tasks": []
}
