tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__GreenEthenone-AAAAAAAAAAAAAAAAAAAMLw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3119,
  "prerequisites": [
    3107
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The other half of TNM is Ethenone. Once again, DTs can make this easier for you, but Ethenone is pretty simple to figure out: either Acetic Acid or Acetone can make it, both of which are DT outputs, but Acetic Acid also needs Sulfuric Acid to make it.\n\nAcetone is easier, but either way works. One important thing to understand is that you only need a small, tiny amount of Ethenone when compared to other chemicals. When working with Biodiesel, 200L of Ethenone are enough for 9000L of CBD, which is equal to 9 million EU at 100% fuel efficiency. With that consideration, each bucket of Ethenone corresponds to 45M EU! Quite powerful, if I do say so myself.\n\nClearly, your bottleneck will be the Biodiesel and, in turn, the Seed/Fish Oil.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Green Ethenone",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3107
  ],
  "rewards": [],
  "tasks": []
}
