tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__GreenNitricAcid-AAAAAAAAAAAAAAAAAAAMLg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3118,
  "prerequisites": [
    3107
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One half of TNM is Nitric Acid, which has more paths to reach it than can be listed here. It's basically Hydrogen, Nitrogen and Oxygen merged together, and many compounds made from these things can lead you to Nitric Acid. How you get this is up to you, but it might be a lot easier if you already automated some Distillation Tower setups for other renewable resources.\n\nLet me explain. Nitric Acid can be made directly from Ammonia and Oxygen. O2 has many sources, and you should have already automated it, but Ammonia is harder to get: you either make it from Nitrogen Oxide and Dioxide, or you skip all that with a Fermented Biomass DT, which outputs Ammonia directly. That is the fastest way, if you already made that setup, otherwise you'll need to chain several reactions together.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Green Nitric Acid",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3107
  ],
  "rewards": [],
  "tasks": []
}
