tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__HugeTurbinesAndL-AAAAAAAAAAAAAAAAAAAMQw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3139,
  "prerequisites": [
    3138
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you are invested in making good IV power from Super Fuel, you will need a lot of Turbine multis. Their EU/t at optimal flow is much too low for you to survive with only one or two. However, there are several things you should consider in regards to these turbines, and the fuel you're using.\n\nIn summary, this fuel is very, very efficient. Turbines can be made faster by losing some efficiency. You have more than enough fuel efficiency to spare!\n\nLet's review this in more detail. Turbines produce EU based on the flow rate of the fuel that they are consuming. Their optimal flow represents the highest fuel efficiency they can reach (140% or 150% for the good turbines in these tiers), but you can increase the flow beyond that point and still get a higher EU/t value. However, the fuel becomes less efficient. A good tradeoff, if you need it.\n\nSteam loses efficiency quickly if you do this, though. The right way to pull this off with Steam Turbines is to switch to Loose mode, a mode unique to them, which makes the optimal flow shoot way up at a considerable loss to fuel efficiency. The jump in EU/t is so high, however, that you can replace a whole squadron of turbines with just one or two, as you can see if you look at the turbine items' tooltips.\n\nEach setup has their own details, so you will have to work things out and make personal decisions about how you will manage the turbines. Just make sure to not let the EU/t value go beyond the maximum that the dynamo hatch can output, or you will have problems!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Huge Turbines And Loose Mode",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3138
  ],
  "rewards": [],
  "tasks": []
}
