tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__LargeSteelBoiler-AAAAAAAAAAAAAAAAAAAMIQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3105,
  "prerequisites": [
    3098
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Direct Charcoal consumption is also improved, if you want to go that way. The second Large Boiler is made out of Steel, but needs HV circuits, which you can make in this tier by using Polyethylene in the circuit boards. It generates steam at a speed equivalent to 1000 EU/t at 100% fuel efficiency for that steam, which you can't reach with the inefficient Steam Turbines available to you. It also needs two ACOs, but it skips any further processing, at an additional cost of heavy pollution that you'll have to deal with in some way.\n\nThis is the most \"spammable\" setup you can make. There are no further upgrades to the Large Boilers that accept these cheap fuels (the next boilers only accept some more complicated ones), but you can wallshare these to increase the energy input into your processing. The biggest problem, as usual, is transporting the steam to prevent big energy losses across long stretches of cable. This is not the best option, but it can be used.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Large Steel Boiler",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3098
  ],
  "rewards": [],
  "tasks": []
}
