tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__MassDistilledWat-AAAAAAAAAAAAAAAAAAAMOg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3130,
  "prerequisites": [
    3127
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Water is completely free, that much is obvious. Distilled Water, though? It's the same input, but it needs a machine to process it into this version, and you best not choose singleblock Distilleries to do this, because they are incredibly slow and will never keep up with your demands.\n\nThe obvious option is a Distillation Tower. The less obvious option is a Steam Turbine multi, which outputs Distilled Water that is supposedly piped back to where the steam is made. However, there are several steam producers that use regular water, so you can try that? The DT is the simplest and most direct option, though. 3-high is the minimum, so you have to build it like that. It doesn't need a lot of power, it will fill up a tank of any size over time since the water input is completely free.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Mass Distilled Water",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3127
  ],
  "rewards": [],
  "tasks": []
}
